Removed Java 7 tips and added build instructions